list files in compressed archives on readdir

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,7 @@
 project('decompress-fs', 'c')
-add_global_arguments('-g', language: 'c')
+add_global_arguments('-g', '-Werror', language: 'c')
+
 fuse3 = dependency('fuse3')
-executable('decompressfs', 'decompress-fs.c', dependencies : fuse3)
+libarchive = dependency('libarchive')
+sources = ['decompress-fs.c', 'utils.c']
+executable('decompressfs', sources, dependencies : [fuse3, libarchive])
