add fifo list implementation

--- a/meson.build
+++ b/meson.build
@@ -3,5 +3,5 @@ add_global_arguments('-g', '-Werror', language: 'c')
 
 fuse3 = dependency('fuse3')
 libarchive = dependency('libarchive')
-sources = ['decompress-fs.c', 'utils.c']
+sources = ['decompress-fs.c', 'utils.c', 'mem.c']
 executable('decompressfs', sources, dependencies : [fuse3, libarchive])
