reorganise project files

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,18 @@
 project('decompress-fs', 'c')
 add_global_arguments('-g', '-Werror', language: 'c')
 
-fuse3 = dependency('fuse3')
-libarchive = dependency('libarchive')
-sources = ['decompress-fs.c', 'utils.c', 'mem.c']
-executable('decompressfs', sources, dependencies : [fuse3, libarchive])
+sources = []
+header_files = []
+
+subdir('src')
+inc = [include_directories('include')]
+
+dependencies = [dependency('fuse3'), dependency('libarchive')]
+
+executable('decompressfs', sources, include_directories: inc, dependencies: dependencies)
+
+
+configure_file(input : '.clang-format',
+               output : '.clang-format',
+               configuration : configuration_data())
+run_target('format', command : ['clang-format','-i','-style=file', sources, header_files])
