framework for tests

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,1 +1,4 @@
-sources += files('decompress-fs.c', 'utils.c', 'mem.c')
+mem = files('mem.c')
+utils = files('decompress-fs.c', 'utils.c', 'mem.c')
+main = files('decompress-fs.c', 'utils.c', 'mem.c')
+sources += [main, mem, utils]
