--- a/meson.build
+++ b/meson.build
@@ -1,11 +1,13 @@
 project('decompress-fs', 'c')
 add_global_arguments('-g', '-Werror', language: 'c')
 
+inc = [include_directories('include')]
 sources = []
 header_files = []
+test_sources = []
 
 subdir('src')
-inc = [include_directories('include')]
+subdir('tests')
 
 dependencies = [dependency('fuse3'), dependency('libarchive')]
 
@@ -15,4 +17,10 @@ executable('decompressfs', sources, include_directories: inc, dependencies: depe
 configure_file(input : '.clang-format',
                output : '.clang-format',
                configuration : configuration_data())
-run_target('format', command : ['clang-format','-i','-style=file', sources, header_files])
+run_target('format', command: [
+    'clang-format',
+    '-i',
+    '-style=file',
+    sources,
+    header_files,
+    test_sources])
