add skeleton for integration tests

--- a/include/meson.build
+++ b/include/meson.build
@@ -1,2 +1,6 @@
-header_files += files('mem.h', 'utils.h', 'decompress-fs.h')
+mem_h = files('mem.h')
+utils_h = files('utils.h')
+decompress_fs_h = files('decompress-fs.h')
+
+header_files += [mem_h, utils_h, decompress_fs_h]
 
