--- a/src/meson.build
+++ b/src/meson.build
@@ -2,4 +2,4 @@ mem = files('mem.c')
 decompress = files('decompress-fs.c')
 utils = files('utils.c')
 main = files('main.c')
-sources += [main, decompress, mem, utils]
+sources += [decompress, mem, utils]
