--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ sudo: false
 services:
     - docker
 before_install:
-    - docker pull jpakkane/mesonci:bionic
+    - docker pull archimg/base
 script:
-    - echo FROM jpakkane/mesonci:bionic > Dockerfile
-    - echo ADD . /root >> Dockerfile
-    - echo RUN apt-get update && apt-get install --yes fuse3 libfuse3-dev libarchive libarchive-dev cmocka
-    - docker build -t withgit .
-      docker run withgit /bin/sh -c "cd /root && TRAVIS=true CC=$CC CXX=$CXX meson builddir && cd builddir && ninja test"
+    - echo FROM archimg/base > Dockerfile
+    - echo "RUN pacman -Sy && pacman -S --noconfirm cmocka meson fuse3 libarchive gcc pkg-config" >> Dockerfile
+    - docker build -t testimg .
+    - docker run -v $PWD:/mnt testimg /bin/bash -c "cd /mnt && meson builddir && cd builddir && ninja test"
