--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: false
 services:
     - docker
 before_install:
-    - docker pull archimg/base
+    - docker pull archlinux/base
 script:
-    - echo FROM archimg/base > Dockerfile
+    - echo FROM archlinux/base > Dockerfile
     - echo "RUN pacman -Sy && pacman -S --noconfirm cmocka meson fuse3 libarchive gcc pkg-config" >> Dockerfile
     - docker build -t testimg .
     - docker run -v $PWD:/mnt testimg /bin/bash -c "cd /mnt && meson builddir && cd builddir && ninja test"
